# command-utils

./: Cargo.toml
.github/workflows/: ci.yaml
src/: lib.rs  protobuf.rs  text.rs  trace.rs  util.rs
src/protobuf/: resolve.rs
src/tests/: mod.rs  remote_span_tests.rs
src/text/: chunking.rs  reading.rs
src/text/chunking/: chunker.rs  config.rs  error.rs  sliding_window.rs  types.rs
src/text/reading/: mod.rs  sudachi.rs  vibrato.rs
src/trace/: attr.rs  impls.rs  otel_span.rs
src/util/: encoding.rs  id_generator.rs  jq.rs  json_schema.rs  liquid.rs  scoped_cache.rs  shutdown.rs  stack.rs  tracing.rs
