[package]
name = "command-utils"
version = "0.1.0"
authors = ["sutr-app"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
chardet = "0.2"
chrono = { version = "0.4" }
encoding = "0.2"
envy = { version = "0.4" }
flate2 = { version = "1.0", features = ["miniz_oxide"] }
futures = { version = "0.3" }
once_cell = { version = "1" }
opentelemetry = { version = "0.26" }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["metrics"] }
opentelemetry-semantic-conventions = { version = "0.26", features = [
    "semconv_experimental",
] }
opentelemetry-stdout = { version = "0.26" }
opentelemetry-zipkin = { version = "0.26", default-features = false }
pnet = { version = "0.35" }
rand = { version = "0.8" }
regex = { version = "1" }
rs-snowflake = { version = "0.6" }
serde = { version = "1" }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
    "process",
    "parking_lot",
] }
tracing = { version = "0.1" }
tracing-opentelemetry = { version = "0.27" }
tracing-subscriber = { version = "0.3", features = [
    "tracing-log",
    "env-filter",
    "json",
] }

[dev-dependencies]
itertools = { version = "0.13" }
