[package]
name = "command-utils"
version = "0.1.0"
authors = ["sutr-app"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
chardet = "0.2"
chrono = { version = "0.4" }
encoding = "0.2"
envy = { version = "0.4" }
# flate2 = { version = "1.0", features = ["miniz_oxide"] }
futures = { version = "0.3" }
# http = { version = "1" }
itertools = "0.14"
jaq-core = { version = "2" }
jaq-json = { version = "1", features = ["serde_json"] }
jaq-std = { version = "2" }
# liquid = "0.26"
liquid-core = { version = "0.26", features = ["derive"] }
# liquid-lib = "0.26"
liquid-derive = "0.26"
once_cell = { version = "1" }
opentelemetry = { version = "0.31" }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = [
    "grpc-tonic",
    "metrics",
    "logs",
    "trace",
] }
opentelemetry-semantic-conventions = { version = "0.31", features = [
    "semconv_experimental",
] }
opentelemetry-appender-tracing = { version = "0.31" }
# https://github.com/open-telemetry/opentelemetry-rust/issues/3169
opentelemetry-proto = "=0.31.0"
opentelemetry-stdout = { version = "0.31" }
opentelemetry-zipkin = { version = "0.31", default-features = false, features = [
    "reqwest-rustls",
] }
pnet = { version = "0.35" }
prost = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
prost-reflect-build = "0.16"
rand = { version = "0.9" }
regex = { version = "1" }
rs-snowflake = { version = "0.6" }
serde = { version = "1" }
serde_json = "1.0"
tempfile = "3"
thiserror = { version = "2" }
tonic-prost-build = { version = "0.14" }
tonic = "0.14"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
tracing-opentelemetry = { version = "0.32" }
tracing-subscriber = { version = "0.3", features = [
    "tracing-log",
    "env-filter",
    "json",
] }

[features]
default = ["otlp-http"]
otlp-http = ["opentelemetry-otlp/http-proto"]

[dev-dependencies]
itertools = { version = "0.14" }
uuid = { version = "1", features = ["v4"] }
